contract index, link home

--- a/Project_sem_3/Views/Shared/_Layout.cshtml
+++ b/Project_sem_3/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
                             @*<li class="menu-item">@Html.ActionLink("Insurance plans", "Insurance", "Home")</li>
         <li class="menu-item">@Html.ActionLink("Resource", "Resource", "Home")</li>*@
 
-                            @*<li class="menu-item">@Html.ActionLink("Home", "Index", "Home")</li>*@
+                            <li class="menu-item">@Html.ActionLink("Home", "index", "Home")</li>
                             <li class="menu-item">@Html.ActionLink("Medical", "MedicalInsurance", "Home")</li>
                             <li class="menu-item">@Html.ActionLink("House", "HouseInsurance", "Home")</li>
                             <li class="menu-item">@Html.ActionLink("Motor", "MotorInsurance", "Home")</li>
@@ -455,3 +455,9 @@
 
 </body>
 </html>
+@*<style>
+   main-navigation.menu-item{
+           text-decoration: none;
+    }
+
+</style>*@
