--- a/Project_sem_3/Views/Contract/Index.cshtml
+++ b/Project_sem_3/Views/Contract/Index.cshtml
@@ -37,7 +37,7 @@
     }
 
     .hd-info-pro {
-        background-color: #0b665a;
+        background-color: #0f75bd;
         color: #fff;
         font-weight: bold;
         text-transform: uppercase;
@@ -51,6 +51,7 @@
         background: #fff;
         border: 1px solid #e4e4e4;
         padding: 25px;
+        margin-bottom: 20px;
     }
 
     .mes-frm {
@@ -63,7 +64,7 @@
         color: #ea212d;
         text-transform: uppercase;
         font-size: 18px;
-        border-left: solid 4px #0b665a;
+        border-left: solid 4px #0f75bd;
         padding-left: 10px;
         background-color: #f5f5f5;
         padding-top: 10px;
@@ -149,7 +150,7 @@
 
     .table-donhang thead th {
         border-bottom-width: 1px;
-        background-color: #0b665a;
+        background-color:  #0f75bd;
         font-size: 14px;
         color: #fff;
     }
@@ -354,7 +355,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <div class="sub-hd-frm" style="margin-bottom:0">
+                <div class="sub-hd-frm" style="margin-bottom:10px">
                     Vehicle information
                 </div>
                 <table class="table2 table-bordered table-hover table-donhang table-responsive-lg">
