--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
@@ -22,7 +22,7 @@
         @*<button type="button" id="delete_checked">Delete Selected</button>*@
         <div style="margin-bottom:15px;">
             <a href="https://localhost:44362/Admin/InsurancePackages/Create" class="btn btn-info" role="button">Create Insurance Packages</a>
-            <a href="https://localhost:44362/Admin/InsurancePackages/Deleted" class="btn btn-info float-right" role="button">Insurance Packages Deleted</a>
+            
         </div>
 
 
@@ -33,7 +33,19 @@
             </div>
             <div class="card-body">
                 <div>
-                    <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                    <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">      
+                      <div class="col-md-4 col-12 mt-2">
+                        <div class="form-group mr-3">
+                            <form action="/Admin/InsurancePackages/" method="get" id="listPackage">
+                                <div class="dataTables_length" id="dataTable_length">
+                                    <label>
+                                        List Status
+                                        @Html.DropDownList("listPackage", null, new { @class = "custom-select custom-select-sm form-control form-control-sm" })
+                                    </label>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
 
                         <div class="row">
                             <div class="col-sm-12 col-md-6">
@@ -122,7 +134,7 @@
                                             <div class="form-group mr-3">
                                                 <select class="form-control mr-2" id="select-action">
                                                     <option value="6">--Chọn thao tác--</option>
-                                                    <option value="0">Action</option>
+                                                    <option value="1">Active Return</option>
                                                     <option value="-1">Deleted</option>
                                                 </select>
                                             </div>
@@ -213,6 +225,11 @@
             $(function () {
                 $("#pageSize").change(function () {
                     $("#pagesize").submit();
+                });
+            });
+            $(function() {
+                $("#listPackage").change(function() {
+                    $("#listPackage").submit();
                 });
             });
         });
