--- a/Project_sem_3/Areas/Admin/Views/Programmes/Create.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Create.cshtml
@@ -8,7 +8,7 @@
 <link href="/Areas/Admin/Assets/css/custom.css" rel="stylesheet" />
 
 <div class="container">
-    <form action="/Admin/Programmes" method="post">
+    <form action="/Admin/Programmes/Create" method="post">
         <div class="col-lg-9 col-md-8 col-sm-12">
             <div class="box-border-pro">
                 <div class="frm frmpro">
@@ -19,7 +19,7 @@
                         <div class="row">
                             <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Name Programme:</label>
                             <div class="col-lg-8">
-                                <input  type="text" id="ctl18_fullname" class="form-control txt" placeholder="Name programme" />
+                                <input  type="text" id="ctl18_fullname" name="name" class="form-control txt" placeholder="Name programme" />
                                 <i class="pad-top-5">
                                     <span id="ctl18_lblInsuredReq" class="req" style="color:Red;"></span>
                                 </i>
@@ -30,7 +30,7 @@
                         <div class="row">
                             <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Price :</label>
                             <div class="col-lg-8">
-                                <input  type="number" id="ctl18_txtAddress" class="form-control txt" placeholder="Price"></input>
+                                <input  type="number" id="ctl18_txtAddress" name="price" class="form-control txt" placeholder="Price"></input>
                                 <i class="pad-top-5">
                                     <span id="ctl18_lblAddressReq" class="req" style="color:Red;"></span>
                                 </i>
